--- a/OuhmaniaPeopleRecognizer/AddPersonDialog.resx
+++ b/OuhmaniaPeopleRecognizer/AddPersonDialog.resx
@@ -117,16 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="HelloString" xml:space="preserve">
-    <value>Hello Photobook</value>
-  </data>
-  <data name="MainWindow_Save" xml:space="preserve">
-    <value />
-  </data>
-  <data name="MainWindow_deletePersonToolStripContextMenuItem_Confirm" xml:space="preserve">
-    <value>Czy chcesz usunąć '{0}'?</value>
-  </data>
-  <data name="MainWindow_deletePersonToolStripContextMenuItem_ConfirmTitle" xml:space="preserve">
-    <value>Usuń osobę</value>
-  </data>
+  <metadata name="addPersonDialogBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
