--- a/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
+++ b/OuhmaniaPeopleRecognizer/Properties/Resources.en-us.resx
@@ -20,4 +20,22 @@
   <data name="MainWindow_deletePersonToolStripContextMenuItem_ConfirmTitle" xml:space="preserve">
     <value>Delete person</value>
   </data>
+  <data name="MainWindow_addPerson_Title" xml:space="preserve">
+    <value>Add person</value>
+  </data>
+  <data name="MainWindow_addPerson_Caption" xml:space="preserve">
+    <value>Type in name and lastname</value>
+  </data>
+  <data name="MainWindow_CheckUnsavedChangesDialog_Caption" xml:space="preserve">
+    <value>You have unsaved changes in project! Do you want to save them?</value>
+  </data>
+  <data name="MainWindow_CheckUnsavedChangesDialog_Title" xml:space="preserve">
+    <value>Unsaved changes</value>
+  </data>
+  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles" xml:space="preserve">
+    <value>{0} files was not found. Do you want to remove them from the project? \n {1}</value>
+  </data>
+  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles_Title" xml:space="preserve">
+    <value>Missing files</value>
+  </data>
 </root>
