--- a/OuhmaniaPeopleRecognizer/MainWindow.resx
+++ b/OuhmaniaPeopleRecognizer/MainWindow.resx
@@ -125,6 +125,18 @@
     <value>403, 3</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="rotateRightToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>155, 22</value>
+  </data>
+  <data name="rotateRightToolStripMenuItem.Text" xml:space="preserve">
+    <value>Obróć w prawo</value>
+  </data>
+  <data name="rotateLeftToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>155, 22</value>
+  </data>
+  <data name="rotateLeftToolStripMenuItem.Text" xml:space="preserve">
+    <value>Obróć w lewo</value>
+  </data>
   <data name="pictureMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 48</value>
   </data>
@@ -159,24 +171,24 @@
   <data name="&gt;&gt;pictureBox1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="rotateRightToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 22</value>
-  </data>
-  <data name="rotateRightToolStripMenuItem.Text" xml:space="preserve">
-    <value>Obróć w prawo</value>
-  </data>
-  <data name="rotateLeftToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 22</value>
-  </data>
-  <data name="rotateLeftToolStripMenuItem.Text" xml:space="preserve">
-    <value>Obróć w lewo</value>
-  </data>
   <data name="peopleCheckBoxList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
   </data>
   <metadata name="peopleListMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 3</value>
   </metadata>
+  <data name="addPersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 22</value>
+  </data>
+  <data name="addPersonToolStripContextMenuItem.Text" xml:space="preserve">
+    <value>Dodaj osobę</value>
+  </data>
+  <data name="deletePersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 22</value>
+  </data>
+  <data name="deletePersonToolStripContextMenuItem.Text" xml:space="preserve">
+    <value>Usuń wybraną osobę</value>
+  </data>
   <data name="peopleListMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
     <value>185, 48</value>
   </data>
@@ -202,7 +214,7 @@
     <value>100, 44</value>
   </data>
   <data name="peopleCheckBoxList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>251, 212</value>
+    <value>251, 233</value>
   </data>
   <data name="peopleCheckBoxList.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -218,18 +230,6 @@
   </data>
   <data name="&gt;&gt;peopleCheckBoxList.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="addPersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 22</value>
-  </data>
-  <data name="addPersonToolStripContextMenuItem.Text" xml:space="preserve">
-    <value>Dodaj osobę</value>
-  </data>
-  <data name="deletePersonToolStripContextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>184, 22</value>
-  </data>
-  <data name="deletePersonToolStripContextMenuItem.Text" xml:space="preserve">
-    <value>Usuń wybraną osobę</value>
   </data>
   <data name="treeView1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
@@ -261,36 +261,6 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>974, 24</value>
-  </data>
-  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>14</value>
-  </data>
-  <data name="menuStrip1.Text" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>38, 20</value>
-  </data>
-  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Plik</value>
-  </data>
   <data name="loadProjectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>166, 22</value>
   </data>
@@ -318,11 +288,11 @@
   <data name="closeProgramToolStripMenuItem.Text" xml:space="preserve">
     <value>Zamknij program</value>
   </data>
-  <data name="photosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 20</value>
+  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>38, 20</value>
   </data>
-  <data name="photosToolStripMenuItem.Text" xml:space="preserve">
-    <value>Zdjęcia</value>
+  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
+    <value>Plik</value>
   </data>
   <data name="loadPhotosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>157, 22</value>
@@ -336,11 +306,11 @@
   <data name="rescanDirectoryToolStripMenuItem.Text" xml:space="preserve">
     <value>Odśwież zdjęcia</value>
   </data>
-  <data name="personToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>53, 20</value>
+  <data name="photosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>57, 20</value>
   </data>
-  <data name="personToolStripMenuItem.Text" xml:space="preserve">
-    <value>Osoby</value>
+  <data name="photosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Zdjęcia</value>
   </data>
   <data name="addPersonToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 22</value>
@@ -353,6 +323,36 @@
   </data>
   <data name="removePersonToolStripMenuItem.Text" xml:space="preserve">
     <value>Usuń osobę</value>
+  </data>
+  <data name="personToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>53, 20</value>
+  </data>
+  <data name="personToolStripMenuItem.Text" xml:space="preserve">
+    <value>Osoby</value>
+  </data>
+  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>974, 24</value>
+  </data>
+  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="menuStrip1.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
+    <value>4</value>
   </data>
   <data name="splitContainer1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -475,10 +475,10 @@
     <value>121, 17</value>
   </data>
   <data name="loadedFilesCounttoolStripStatusLabel.Text" xml:space="preserve">
-    <value>Wczytanych plików: {0}</value>
+    <value>Wczytanych plików: 0</value>
   </data>
   <data name="allFilesCounttoolStripStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>95, 17</value>
+    <value>103, 17</value>
   </data>
   <data name="allFilesCounttoolStripStatusLabel.Text" xml:space="preserve">
     <value>Wszystkie pliki: {0}</value>
