--- a/OuhmaniaPeopleRecognizer/Properties/Resources.resx
+++ b/OuhmaniaPeopleRecognizer/Properties/Resources.resx
@@ -135,4 +135,31 @@
   <data name="MainWindow_addPerson_Title" xml:space="preserve">
     <value>Dodaj osobę</value>
   </data>
+  <data name="MainWindow_CheckUnsavedChangesDialog_Caption" xml:space="preserve">
+    <value>Masz niezapisane zmiany w projekcie! Czy chcesz je zapisać?</value>
+  </data>
+  <data name="MainWindow_CheckUnsavedChangesDialog_Title" xml:space="preserve">
+    <value>Niezapisane zmiany</value>
+  </data>
+  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles" xml:space="preserve">
+    <value>Nie znaleziono {0} plików. Czy chcesz je usunąć z projektu? \n {1}</value>
+  </data>
+  <data name="MainWindow_CheckMissingFiles_FoundMissingFiles_Title" xml:space="preserve">
+    <value>Brakujące pliki</value>
+  </data>
+  <data name="MainWindow_Autosave_Off" xml:space="preserve">
+    <value>Autozapis: Wyłączony</value>
+  </data>
+  <data name="MainWindow_Autosave_On" xml:space="preserve">
+    <value>Autozapis: Włączony</value>
+  </data>
+  <data name="MainWindow_Autosave_Status" xml:space="preserve">
+    <value>{0}. ostatni: {1}</value>
+  </data>
+  <data name="MainWindow_loadedFilesCounttoolStripStatusLabel" xml:space="preserve">
+    <value>Wczytanych plików: {0}</value>
+  </data>
+  <data name="MainWindow_allFilesCounttoolStripStatusLabel" xml:space="preserve">
+    <value>Wszystkie pliki: {0}</value>
+  </data>
 </root>
